fix replyList text too long will overflow error

--- a/src/assets/scss/tweetListStyle.scss
+++ b/src/assets/scss/tweetListStyle.scss
@@ -40,8 +40,12 @@
   }
   .tweet-content {
     margin-bottom: 10px;
+     word-break: break-word;
+    width: 100%;
+    overflow: hidden;
     p{
-      white-space: pre;
+      white-space:pre-wrap;
+      word-break: break-word;
     }
   }
 }
